// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField renders 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="field_1"
      id="field_1-label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <input
      aria-invalid="false"
      class="ds-c-field"
      id="field_1"
      name="spec-field"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextField renders with a label mask 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="field_2"
      id="field_2-label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <div
      class="ds-c-label-mask"
      id="labelmask_3"
    >
      <span
        class=""
      >
        MM/DD/YYYY
      </span>
      <span
        aria-hidden="true"
        class="ds-u-display--none"
      >
        MM/DD/YYYY
      </span>
    </div>
    <input
      aria-describedby="labelmask_3"
      aria-invalid="false"
      class="ds-c-field"
      id="field_2"
      inputmode="numeric"
      name="spec-field"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextField renders with a mask 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="field_4"
      id="field_4-label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <div
      class="ds-c-field-mask ds-c-field-mask--currency"
    >
      <div
        class="ds-c-field__before ds-c-field__before--currency"
      >
        $
      </div>
      <input
        aria-invalid="false"
        class="ds-c-field ds-c-field--currency"
        id="field_4"
        inputmode="numeric"
        name="spec-field"
        pattern="[0-9.,-]*"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
